--- a/missao.html
+++ b/missao.html
@@ -14,11 +14,27 @@
 <body class="main-bg missao">
 	<div class="web-app">
 		<header>
+            <button class="hamburguer-menu"></button>
 			<nav class="navigation container">
+                <div class="navigation__user">
+                    <div class="user">
+                        <div class="user__wrapper">
+                            <figure>
+                                <img id="user-thumb" src="../assets/img/fake-user.png" alt="imagem do perfil">
+                            </figure> 
+                            <p id="user-name" class="name">Usuário</p>
+                            <p id="user-score" class="score">0000</p>
+                        </div>
+                    </div>
+                </div>
                 <ul>
                     <li><a href="">Jogo</a></li>
                     <li><a href="/missao.html">Missões</a></li>
                 </ul>
+                <div class="navigation__footer">
+                    <a href="">Sair</a>
+                </div>
+                <button class="close-menu">x</button>
             </nav>
 		</header>
 		<main class="container">
@@ -73,14 +89,21 @@
                     </div>
                 </section>
 				<section class="right">
-					<!-- <img src="../assets/img/gusttavo-boneco.png" alt="Boneco Embaixador"> -->
-					<iframe class="unit-web" src="https://guilhermeouriques.github.io/projectgus/" frameborder="0" width="430" height="800"></iframe>
-					<iframe class="unit-mobile" src="https://guilhermeouriques.github.io/projectgus2/" frameborder="0" width="450" height="800"></iframe>
+                    <figure class="logo">
+						<img src="/assets/img/logo-mobile.png" alt="Logo Embaixador" class="mobile">
+					</figure>
+                    <!-- <img src="../assets/img/gusttavo-boneco.png" alt="Boneco Embaixador"> -->
+                    <div class="iframe-section">
+                        <iframe class="unit-web" src="https://guilhermeouriques.github.io/projectgus/" frameborder="0" width="430" height="800"></iframe>
+					<iframe class="unit-mobile" src="https://guilhermeouriques.github.io/projectgus2/" frameborder="0" width="330" height="600"></iframe>
+                    </div>
 				</section>
 			</div>
-		</main>
+        </main>
+        <div class="mask-menu"></div>
 	</div>
 </body>
 
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script src="assets/js/script.min.js"></script>
 </html>
