--- a/_html/index.html
+++ b/_html/index.html
@@ -20,8 +20,8 @@
 			<div class="wrapper">
 				<section class="left">
 					<figure>
-						<img src="/assets/img/logo-web.png" alt="Logo Embaixador" class="web">
-						<img src="/assets/img/logo-mobile.png" alt="Logo Embaixador" class="mobile">
+						<img src="./assets/img/logo-web.png" alt="Logo Embaixador" class="web">
+						<img src="./assets/img/logo-mobile.png" alt="Logo Embaixador" class="mobile">
 					</figure>
 					<div class="login">
 						<div class="login__wrapper">
@@ -34,8 +34,8 @@
 					</div>
 				</section>
 				<section class="right">
-					<!-- <img src="../assets/img/gusttavo-boneco.png" alt="Boneco Embaixador"> -->
-					<iframe src="https://guilhermeouriques.github.io/projectgus/" frameborder="0" width="450" height="800"></iframe>
+					<iframe class="unit-web" src="https://guilhermeouriques.github.io/projectgus/" frameborder="0" width="430" height="800"></iframe>
+					    <iframe class="unit-mobile" src="https://guilhermeouriques.github.io/projectgus2/" frameborder="0" width="330" height="600"></iframe>
 				</section>
 			</div>
 		</main>
