--- a/_html/missao.html
+++ b/_html/missao.html
@@ -20,7 +20,7 @@
                     <div class="user">
                         <div class="user__wrapper">
                             <figure>
-                                <img id="user-thumb" src="../assets/img/fake-user.png" alt="imagem do perfil">
+                                <img id="user-thumb" src="./assets/img/fake-user.png" alt="imagem do perfil">
                             </figure> 
                             <p id="user-name" class="name">Usuário</p>
                             <p id="user-score" class="score">0000</p>
@@ -29,7 +29,7 @@
                 </div>
                 <ul>
                     <li><a href="">Jogo</a></li>
-                    <li><a href="/missao.html">Missões</a></li>
+                    <li><a href="./missao.html">Missões</a></li>
                 </ul>
                 <div class="navigation__footer">
                     <a href="">Sair</a>
@@ -43,7 +43,7 @@
 					<div class="user">
                         <div class="user__wrapper">
                             <figure>
-                                <img id="user-thumb" src="../assets/img/fake-user.png" alt="imagem do perfil">
+                                <img id="user-thumb" src="./assets/img/fake-user.png" alt="imagem do perfil">
                             </figure> 
                             <p id="user-name" class="name">Usuário</p>
                             <p id="user-score" class="score">0000</p>
@@ -90,7 +90,7 @@
                 </section>
 				<section class="right">
                     <figure class="logo">
-						<img src="/assets/img/logo-mobile.png" alt="Logo Embaixador" class="mobile">
+						<img src="./assets/img/logo-mobile.png" alt="Logo Embaixador" class="mobile">
 					</figure>
                     <!-- <img src="../assets/img/gusttavo-boneco.png" alt="Boneco Embaixador"> -->
                     <div class="iframe-section">
